--- a/views/reportes/negociacionesAutomatica.twig
+++ b/views/reportes/negociacionesAutomatica.twig
@@ -27,29 +27,13 @@
                             <th>OBSERVACION CORTA</th>
                             <th>ABONO AL CORTE</th>
                             <th>Nº MOT DE NO PAGO</th>
-
-
-
-
-
-
-                            <th>CONSOLIDACION DE DEUDAS (SI/NO -VACIO)</th>
-                            <th>TRASLADO DE VALORES DINERS (SI/NO - VACIO)</th>
-                            <th>TRASLADO DE VALORES VISA (SI/NO - VACIO)</th>
-                            <th>TRASLADO DE VALORES DISCOVER (SI/NO - VACIO)</th>
-                            <th>TRASLADO DE VALORES MASTERCARD (SI/NO - VACIO)</th>
-                            <th>CIUDAD</th>
+                            <th>SOCIO CON ACTIVIDAD ACTUAL</th>
+                            <th>GESTION DETALLADA MESES DE GRACIA</th>
+                            <th>INGRESOS</th>
+                            <th>GASTOS</th>
+                            <th>GESTOR</th>
+                            <th>SUSTENTO</th>
                             <th>ZONA</th>
-                            <th>INGRESOS SOCIO</th>
-                            <th>GASTOS SOCIO</th>
-                            <th>ABONO MISMO DIA DEL CORTE DINERS</th>
-                            <th>ABONO MISMO DIA DEL CORTE VISA</th>
-                            <th>ABONO MISMO DIA DEL CORTE DISCOVER</th>
-                            <th>ABONO MISMO DIA DEL CORTE MASTECARD</th>
-                            <th>OBSERVACIONES DE LA NEGOCIACIÓN PARA APROBACIÓN</th>
-                            <th>ANALISIS DEL FLUJO</th>
-                            <th>CAMPANA</th>
-                            <th>NOMBRE DEL GESTOR</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -63,31 +47,16 @@
                             <td style="text-align: center;" v-html="d.tipo_negociacion"></td>
                             <td style="text-align: center;" v-html="d.plazo_financiamiento"></td>
                             <td style="text-align: center;" v-html="d.numero_meses_gracia"></td>
-                            <td style="text-align: center;" v-html="d.observaciones"></td>
+                            <td style="" v-html="d.observaciones"></td>
                             <td style="text-align: center;" v-html="d.abono_negociador"></td>
                             <td style="text-align: center;" v-html="d.motivo_no_pago_codigo"></td>
-
-
-
-
-
-
-                            <td style="text-align: center;" v-html="d.unificar_deudas"></td>
-                            <td style="text-align: center;" v-html="d.traslado_valores_diners"></td>
-                            <td style="text-align: center;" v-html="d.traslado_valores_visa"></td>
-                            <td style="text-align: center;" v-html="d.traslado_valores_discover"></td>
-                            <td style="text-align: center;" v-html="d.traslado_valores_mastercard"></td>
-                            <td style="text-align: center;" v-html="d.ciudad"></td>
-                            <td style="text-align: center;" v-html="d.zona"></td>
+                            <td style="text-align: center;" v-html="d.actividad_actual"></td>
+                            <td style="text-align: center;" v-html="d.gestion_detallada"></td>
                             <td style="text-align: center;" v-html="d.ingresos_cliente"></td>
                             <td style="text-align: center;" v-html="d.egresos_cliente"></td>
-                            <td style="text-align: center;" v-html="d.abono_corte_diners"></td>
-                            <td style="text-align: center;" v-html="d.abono_corte_visa"></td>
-                            <td style="text-align: center;" v-html="d.abono_corte_discover"></td>
-                            <td style="text-align: center;" v-html="d.abono_corte_mastercard"></td>
-                            <td style="text-align: center;" v-html="d.analisis_flujo"></td>
-                            <td style="text-align: center;" v-html="d.campana"></td>
-                            <td style="text-align: center;" v-html="d.gestor"></td>
+                            <td style="" v-html="d.gestor"></td>
+                            <td style="text-align: center;" v-html="d.medio_contacto"></td>
+                            <td style="" v-html="d.zona"></td>
                         </tr>
                         </tbody>
                     </table>
