--- a/views/reportes/filtrosInformeJornada.twig
+++ b/views/reportes/filtrosInformeJornada.twig
@@ -6,11 +6,11 @@
 		<form id="filtros">
 			<div class="row ">
 				<div class="col-sm-3">
-					<b>Plaza</b> <br>
+					<b>Zona</b> <br>
 					<div class="input-group">
-						<select class="form-control select2" name="plaza_usuario[]" id="plaza_usuario" multiple>
+						<select class="form-control select2" name="zona_cliente[]" id="zona_cliente" multiple>
 							<option value=""></option>
-							<option v-for="(v,k) in plaza_usuario" v-html="v" :value="k"></option>
+							<option v-for="(v,k) in zona_cliente" v-html="v" :value="k"></option>
 						</select>
 					</div>
 				</div>
@@ -72,6 +72,7 @@
                     plaza_usuario: {{ plaza_usuario|raw }},
                     horas: {{ horas|raw }},
                     minutos: {{ minutos|raw }},
+					zona_cliente: {{ zona_cliente|raw }},
                 },
                 methods: {},
             });
