--- a/views/reportes/informeJornada.twig
+++ b/views/reportes/informeJornada.twig
@@ -175,6 +175,10 @@
 							theme: "classic",
 							initSelection: function(element, callback) {}
 						});
+						$("#zona_cliente").select2({
+							theme: "classic",
+							initSelection: function(element, callback) {}
+						});
 					});
                     $('.select2').select2({
                         theme: "classic"
