--- a/views/reportes/generalCampo.twig
+++ b/views/reportes/generalCampo.twig
@@ -158,6 +158,10 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
+                        $("#zona_cliente").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
                         // self.consultar();
                     });
                     $('.select2').select2({
